--- a/front-end/src/index.css
+++ b/front-end/src/index.css
@@ -202,7 +202,8 @@ rect:nth-child(10) { fill: black; }
 
 
 .skills {
-  width: calc(100% - 36px);
+  min-width: 652px;
+  width: calc(100% - 38px);
   margin: 0 8px 8px 8px;
   padding: 10px;
   display: inline-block;
